--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -5,7 +5,6 @@ set_real_ip_from 2001:1b60:3:221:4134:101:0:1;
 set_real_ip_from 2001:1b60:3:221:701:102:0:1;
 set_real_ip_from 2001:1b60:3:239:1003:103:0:1;
 set_real_ip_from 2001:1b60:3:239:1003:106:0:1;
-set_real_ip_from 2001:1c02:1a18:5700:7b6:bf5f:7e8:70d9;
 set_real_ip_from 2001:41d0:1008:20d1::1;
 set_real_ip_from 2001:41d0:2:9161::1;
 set_real_ip_from 2001:41d0:304:200::3348;
@@ -165,7 +164,6 @@ set_real_ip_from 2605:6400:30:ed0c:b477:4972:756a:2f42;
 set_real_ip_from 2605:6400:30:edc3::34;
 set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 set_real_ip_from 2605:6400:30:efba:dead::;
-set_real_ip_from 2605:6400:30:f04d:2605:6400:30:30;
 set_real_ip_from 2605:6400:30:f05d:c272:5525:72b1:e64c;
 set_real_ip_from 2605:6400:30:f060:be62:b857:b818:9144;
 set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -453,6 +451,7 @@ set_real_ip_from 2a06:1700:2:1a1::6dc4:997c;
 set_real_ip_from 2a06:1700:3:19::1;
 set_real_ip_from 2a06:1700:3:34::1;
 set_real_ip_from 2a06:1700:4:14::1;
+set_real_ip_from 2a06:3000::10;
 set_real_ip_from 2a06:3000::30;
 set_real_ip_from 2a06:3000::40;
 set_real_ip_from 2a06:d380:0:103::62;
@@ -687,6 +686,7 @@ set_real_ip_from 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 set_real_ip_from 2a0e:97c0:3e3:a0e::1;
 set_real_ip_from 2a0e:97c0:3ea:882::1;
+set_real_ip_from 2a0e:97c0:470::28;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:bfc0:0:11::796d;
