--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -204,7 +204,6 @@ allow 177.93.140.66;
 allow 178.162.175.5;
 allow 178.17.170.144;
 allow 178.17.170.23;
-allow 178.17.170.39;
 allow 178.17.171.102;
 allow 178.17.174.14;
 allow 178.17.174.164;
@@ -238,7 +237,6 @@ allow 185.100.87.166;
 allow 185.100.87.174;
 allow 185.100.87.41;
 allow 185.10.16.41;
-allow 185.104.120.10;
 allow 185.104.120.30;
 allow 185.104.120.40;
 allow 185.106.102.102;
@@ -475,7 +473,7 @@ allow 185.247.226.249;
 allow 185.247.226.95;
 allow 185.252.232.218;
 allow 185.254.196.141;
-allow 185.28.47.6;
+allow 185.28.47.10;
 allow 185.34.33.2;
 allow 185.35.202.222;
 allow 185.39.207.83;
@@ -1217,7 +1215,6 @@ allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:44::326d;
 allow 2a00:1dc0:caff:68::1;
 allow 2a00:1dc0:caff:73::a568;
-allow 2a00:1dc0:caff:81::396e;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:4d80::1;
 allow 2a00:74a0:e000:1003::114;
@@ -1236,7 +1233,8 @@ allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:4780:2d:ea47::1;
-allow 2a02:4840:1:4::5;
+allow 2a02:4840:1:3::16;
+allow 2a02:4840:1:4::9;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
@@ -1314,7 +1312,6 @@ allow 2a06:1700:2:1a1::6dc4:997c;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
-allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
@@ -1548,6 +1545,7 @@ allow 2a0e:97c0:3e3:460:1337:b20b:1337:9;
 allow 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 allow 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 allow 2a0e:97c0:3e3:a0e::1;
+allow 2a0e:97c0:3e3:b6::1;
 allow 2a0e:97c0:3ea:882::1;
 allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
@@ -1761,7 +1759,6 @@ allow 45.66.35.34;
 allow 45.66.35.35;
 allow 45.80.158.167;
 allow 45.80.158.175;
-allow 45.80.158.193;
 allow 45.80.158.205;
 allow 45.80.158.23;
 allow 45.80.158.27;
@@ -1907,7 +1904,6 @@ allow 82.153.138.125;
 allow 82.153.138.241;
 allow 82.221.128.191;
 allow 82.221.131.5;
-allow 82.221.131.86;
 allow 82.221.139.190;
 allow 82.29.153.76;
 allow 83.147.17.190;
@@ -1919,6 +1915,7 @@ allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.226.13;
 allow 84.239.46.144;
+allow 84.38.130.33;
 allow 85.239.41.130;
 allow 85.93.218.204;
 allow 86.54.28.49;
