--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -354,7 +354,6 @@ allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:44::326d;
 allow 2a00:1dc0:caff:68::1;
 allow 2a00:1dc0:caff:73::a568;
-allow 2a00:1dc0:caff:81::396e;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:4d80::1;
 allow 2a00:74a0:e000:1003::114;
@@ -373,7 +372,8 @@ allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:4780:2d:ea47::1;
-allow 2a02:4840:1:4::5;
+allow 2a02:4840:1:3::16;
+allow 2a02:4840:1:4::9;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
@@ -451,7 +451,6 @@ allow 2a06:1700:2:1a1::6dc4:997c;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
-allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
@@ -685,6 +684,7 @@ allow 2a0e:97c0:3e3:460:1337:b20b:1337:9;
 allow 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 allow 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 allow 2a0e:97c0:3e3:a0e::1;
+allow 2a0e:97c0:3e3:b6::1;
 allow 2a0e:97c0:3ea:882::1;
 allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
