--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -204,7 +204,6 @@ deny 177.93.140.66;
 deny 178.162.175.5;
 deny 178.17.170.144;
 deny 178.17.170.23;
-deny 178.17.170.39;
 deny 178.17.171.102;
 deny 178.17.174.14;
 deny 178.17.174.164;
@@ -238,7 +237,6 @@ deny 185.100.87.166;
 deny 185.100.87.174;
 deny 185.100.87.41;
 deny 185.10.16.41;
-deny 185.104.120.10;
 deny 185.104.120.30;
 deny 185.104.120.40;
 deny 185.106.102.102;
@@ -475,7 +473,7 @@ deny 185.247.226.249;
 deny 185.247.226.95;
 deny 185.252.232.218;
 deny 185.254.196.141;
-deny 185.28.47.6;
+deny 185.28.47.10;
 deny 185.34.33.2;
 deny 185.35.202.222;
 deny 185.39.207.83;
@@ -1217,7 +1215,6 @@ deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:44::326d;
 deny 2a00:1dc0:caff:68::1;
 deny 2a00:1dc0:caff:73::a568;
-deny 2a00:1dc0:caff:81::396e;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:4d80::1;
 deny 2a00:74a0:e000:1003::114;
@@ -1236,7 +1233,8 @@ deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
 deny 2a02:4780:2d:ea47::1;
-deny 2a02:4840:1:4::5;
+deny 2a02:4840:1:3::16;
+deny 2a02:4840:1:4::9;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
 deny 2a02:c204:2195:2012::1;
@@ -1314,7 +1312,6 @@ deny 2a06:1700:2:1a1::6dc4:997c;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
-deny 2a06:3000::10;
 deny 2a06:3000::30;
 deny 2a06:3000::40;
 deny 2a06:d380:0:103::62;
@@ -1548,6 +1545,7 @@ deny 2a0e:97c0:3e3:460:1337:b20b:1337:9;
 deny 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 deny 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 deny 2a0e:97c0:3e3:a0e::1;
+deny 2a0e:97c0:3e3:b6::1;
 deny 2a0e:97c0:3ea:882::1;
 deny 2a0e:97c0:470::28;
 deny 2a0e:97c0:470::30;
@@ -1761,7 +1759,6 @@ deny 45.66.35.34;
 deny 45.66.35.35;
 deny 45.80.158.167;
 deny 45.80.158.175;
-deny 45.80.158.193;
 deny 45.80.158.205;
 deny 45.80.158.23;
 deny 45.80.158.27;
@@ -1907,7 +1904,6 @@ deny 82.153.138.125;
 deny 82.153.138.241;
 deny 82.221.128.191;
 deny 82.221.131.5;
-deny 82.221.131.86;
 deny 82.221.139.190;
 deny 82.29.153.76;
 deny 83.147.17.190;
@@ -1919,6 +1915,7 @@ deny 84.16.224.227;
 deny 84.19.182.20;
 deny 84.211.226.13;
 deny 84.239.46.144;
+deny 84.38.130.33;
 deny 85.239.41.130;
 deny 85.93.218.204;
 deny 86.54.28.49;
