--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -163,6 +163,7 @@ deny 2605:6400:30:ed0c:b477:4972:756a:2f42;
 deny 2605:6400:30:edc3::34;
 deny 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 deny 2605:6400:30:efba:dead::;
+deny 2605:6400:30:f04d:2605:6400:30:30;
 deny 2605:6400:30:f05d:c272:5525:72b1:e64c;
 deny 2605:6400:30:f060:be62:b857:b818:9144;
 deny 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -357,7 +358,6 @@ deny 2a00:99a0:0:1000::2;
 deny 2a00:c70:1:185:246:84:179:1;
 deny 2a00:fbe4:1ab:ffff::133;
 deny 2a01:270:9847::1;
-deny 2a01:4f8:c0c:7611::1;
 deny 2a01:4f9:2b:75d::124:148;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
@@ -442,11 +442,9 @@ deny 2a06:1700:0:16::1;
 deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:50::11;
 deny 2a06:1700:2:148::8493:bcd8;
-deny 2a06:1700:2:1a1::6dc4:997c;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
-deny 2a06:3000::10;
 deny 2a06:3000::30;
 deny 2a06:3000::40;
 deny 2a06:d380:0:103::62;
@@ -682,7 +680,6 @@ deny 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 deny 2a0e:97c0:3e3:a0e::1;
 deny 2a0e:97c0:3e3:b6::1;
 deny 2a0e:97c0:3ea:882::1;
-deny 2a0e:97c0:470::28;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:11::796d;
